api-gateway/dev/config/hashicups/two-services/frontend-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
  labels:
    app: frontend-v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: high
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    app: frontend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend-v1
      app: frontend-v1
  template:
    metadata:
      labels:
        service: frontend-v1
        app: frontend-v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: frontend-v1
      volumes:
      - name: config
        configMap:
          name: nginx-configmap-v1
          items:
          - key: config
            path: default.conf
      containers:
        - name: frontend-v1
          image: hashicorpdemoapp/frontend:v0.0.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
              readOnly: true
