api-gateway/dev/config/hashicups/two-services/product-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: product-api
spec:
  selector:
    app: product-api
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  labels:
    app: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: product-api
      volumes:
      - name: config
        configMap:
          name: db-configmap
          items:
          - key: config
            path: conf.json
      containers:
        - name: product-api
          image: hashicorpdemoapp/product-api:v0.0.17
          ports:
            - containerPort: 9090
            - containerPort: 9103
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 30
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
