api-gateway/dev/config/hashicups/two-services/consul-api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: test-gateway-class
spec:
  controllerName: "hashicorp.com/consul-api-gateway-controller"
  parametersRef:
    group: api-gateway.consul.hashicorp.com
    kind: GatewayClassConfig
    name: test-gateway-class-config
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: test-gateway
spec:
  gatewayClassName: test-gateway-class
  listeners:
  - protocol: HTTPS
    hostname: localhost
    port: 8443
    name: https
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
        - name: consul-server-cert
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: test-route
spec:
  parentRefs:
  - name: test-gateway
  rules:
  - matches:
    - path:
        type: RegularExpression
        value: ^/.*
    backendRefs:
    - kind: Service
      name: frontend-v1
      port: 80
      weight: 90
    - kind: Service
      name: frontend-v2
      port: 80
      weight: 10
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: test-route-2
spec:
  parentRefs:
  - name: test-gateway
  rules:
  - matches:
    - path:
        type: RegularExpression
        value: ^/echo.*
    backendRefs:
    - kind: Service
      name: echo
      port: 8080
